--- a/doc/03realizacija.tex
+++ b/doc/03realizacija.tex
@@ -75,7 +75,7 @@ Dobijeno stablo je daleko prostije od početnog, i pogodno za dalju transformaci
 \lstinputlisting[float, floatplacement=h, caption=Funkcija za svođenje na KNF formu, label=lst:wff, language=Clojure]{listings/wff.clj}
 
 \section{Prilagođivanje HTML stranica za neke statusne kodove}
-Doslednom izgledu veb aplikacije umnogome doprinose prilagođene stranice u slučaju da resurs nije nađen (status 404) ili da se dogodila neka interna greška (status 500). U slučaju greške, takođe je korisno prikazati i \textit{stack trace} korisniku kako bi administratori imali više informacija za otklanjanje problema.
+Doslednom izgledu veb aplikacije umnogome doprinose prilagođene stranice u slučaju da resurs nije nađen (status 404) ili da se dogodila neka interna greška (status 500). U slučaju greške, takođe je korisno prikazati i potpis steka korisniku kako bi administratori imali više informacija za otklanjanje problema.
 
 \lstinputlisting[float, floatplacement=h, caption=Implementacija prilagođene 404 stranice, label=lst:routes, language=Clojure]{listings/routes.clj}
 Jetty nudi podrazumevane stranice koje se vraćaju u ovakvim slučajevima, koje nisu u skladu sa izgledom izrađene veb aplikacije. Međutim, željeno ponašanje je moguće definisati preko Compojure ruta. Compojure rute se razrešavaju redom kojim su navedene. Ukoliko se nijedna ruta ne poklopi sa zahtevom, Compojure se obraća Jetty serveru, koji onda vraća 404 status sa podrazumevanom stranicom. Umetanjem posebne rute \texttt{compojure.route/not-found}, koja prihvata sve zahteve, na kraj liste ruta, obezbeđeno je izvršavanje hendlera za te rute ukoliko se nijedna ruta pre nje ne poklopi sa zahtevom. Ova ruta implementira prost hendler koji vraća prilagođenu 404 stranicu. Kod je dat na listingu \ref{lst:routes}.
@@ -85,7 +85,7 @@ Situacija za stranicu sa greškom je malo komplikovanija, jer se ona pojavljuje 
 
 Vredno je napomenuti da se Compojure middleware funkcije mogu obmotavati jedna oko druge. Ovaj koncept jako podseća na dekoratore u OOP svetu.
 
-Za potrebe prikazivanja prilagođene stranice u slučaju greške, napravljena je middleware funkcija \texttt{wrap-catch-exceptions} koja obmotava sve rute, a koja hvata sve tipove izuzetaka koji se dese u unutrašnjim hendlerima. Ukoliko se uhvati takav izuzetak, kao odgovor se vraća status 500, a kao telo se navodi string koji sadrži informacije o izuzetku, zajedno sa \textit{stack trace}-om.
+Za potrebe prikazivanja prilagođene stranice u slučaju greške, napravljena je middleware funkcija \texttt{wrap-catch-exceptions} koja obmotava sve rute, a koja hvata sve tipove izuzetaka koji se dese u unutrašnjim hendlerima. Ukoliko se uhvati takav izuzetak, kao odgovor se vraća status 500, a kao telo se navodi string koji sadrži informacije o izuzetku, zajedno sa potpisom steka.
 
 Pored ove funkcije postoji i \texttt{wrap-500} middleware, koji presreće sve odgovore sa statusnim kodom 500, telo menja punom HTML prilagođenom stranicom, i postavlja neophodna HTML zaglavlja. Izvorni kod je priložen u listingu \ref{lst:exc}, a izgled obe stranice se može videti na slici \ref{fig:exc}.
 
@@ -181,7 +181,7 @@ Kada se pomenuta \texttt{db/find-questions-by-task-id} funkcija pozove sa funkci
 \end{verbatim}
 
 \section{\textit{Anti-forgery} token}
-Kao deo standardnih \textit{middleware} funkcija, Compojure obezbeđuje i zaštitu od \textit{Cross-site Request Forgery} napada. Mete ovih napada su HTML obrasci koji izvršavaju POST zahteve ka serveru. Ukratko, napad se ogleda u tome da ulogovani korisnici mimo svoje volje izvrše neke akcije na serveru. Ovo se radi tako što se na stranom sajtu napravi obrazac čiji \texttt{action} atribut gađa resurs na sajtu mete. Nakon toga se metodama socijalnog inženjeringa (na primer, skraćeni link ka stranom sajtu napadač šalje ulogovanom korisniku preko \textit{chat} poruke) ulogovani korisnik navede da izvrši \texttt{submit} akciju na stranom formularu. Kako je korisnik autentifikovan, server prihvata akciju kao validnu, te je izvršava.
+Kao deo standardnih \textit{middleware} funkcija, Compojure obezbeđuje i zaštitu od \textit{Cross-site Request Forgery} napada. Mete ovih napada su HTML obrasci koji izvršavaju POST zahteve ka serveru. Ukratko, napad se ogleda u tome da ulogovani korisnici mimo svoje volje izvrše neke akcije na serveru. Ovo se radi tako što se na stranom sajtu napravi obrazac čiji \texttt{action} atribut gađa resurs na sajtu mete. Nakon toga se metodama socijalnog inženjeringa (na primer, skraćeni link ka stranom sajtu napadač šalje ulogovanom korisniku preko čet poruke) ulogovani korisnik navede da izvrši \texttt{submit} akciju na stranom formularu. Kako je korisnik autentifikovan, server prihvata akciju kao validnu, te je izvršava.
 
 Na primeru izrađene aplikacije, navedeni napad bi, na primer, primorao korisnika da preda test pre nego što je test gotov. Ili bi na silu započeo izradu nekog testa bez saglasnosti korisnika.
 
@@ -199,9 +199,9 @@ Postoji značajan broj aspekata aplikacije koji bi se u budućnosti mogli unapre
 \item Vremensko ograničenje za izradu testa. Studentima je trenutno omogućeno da počnu sa izradom testa, i da sama izrada traje neodređeno dugo. Jedno od bitnijih unapređenja sistem jeste da se postavi vremenski rok za polaganje testa, koji bi se prikazivao studentima dok odgovaraju na pitanja, i nakon koga bi se test automatski predao, tj. završio. Osim vremenskog intervala u kome je neophodno predati test, bilo bi zgodno definisati i vremenski period u kome je polaganje testa uopšte moguće, na primer za vreme ispitnih ili kolokvijumskih rokova.
 \item Administracija grupa studenata. Ovim bi se omogućilo raspoređivanje studenata po arbitrarnim grupama, na primer, po predmetu. Neki testovi bi mogli da se polažu samo od strane studenata koji pripadaju određenoj grupi. Grupe bi mogle da označavaju i studentske godine, te bi student mogao da bude član i više različitih grupa. Studenti bi mogli da zahtevaju da budu primljeni u grupu, ili bi moglo da se implementira automatsko dodavanje studenata u neke grupe, na primer na osnovu broja indeksa iz email naloga. Još jedan benefit grupisanja studenata je lakše pregledanje testova.
 \item Paginacija za rezultate testova. Trenutno se svi testovi prikazuju na istoj stranici, čak iako se vrati veliki broj rezultata. Unapređenje predstavlja implementacija paginacije, sa recimo 50 rezultata po stranici.
-\item Podrška za \textit{Secure Socket Layer} protokol. Korisnici se loguju na sistem tako što šalju email nalog i lozinku kao deo \texttt{POST} zahteva kao \texttt{urlencoded} parametri obrasca. Prostim \textit{sniff}-ovanjem mrežnog saobraćaja moguće je prikupiti sve kredencijale tokom procesa logovanja, i to iskoristiti za lažnu autentikaciju. Na Ring serveru je relativno lako omogućiti OpenSSL podršku, tako da je sav saobraćaj između korisnika i sajta enkriptovan. Time bi se kanal komunikacije sasvim dovoljno osigurao. Za ovu funkcionalnost bi trebalo obezbediti validan sertifikat izdat od strane priznatog autoriteta za sertifikate.
-\item Bolji heš algoritam za skladištenje lozinki. Ukoliko bi maliciozno lice dobilo pristup bazi, moglo bi sa lakoćom da izvrši \textit{brute force} napad, i da sa dovoljno velikim rečnikom uspe da dođe do lozinki drugih korisnika, zajedno sa email nalozima. Trenutno se za skladištenje lozinki koristi \texttt{MD5} heš vrednost lozinke. Time što bi se koristila bolja funkcija za heširanje, na primer \texttt{SHA256}, ili \texttt{bcrypt}, značajno bi se umanjio rizik od ovakve vrste napada. Takođe, treba imati u vidu da je ovakvu vrstu napada moguće izvršiti i bez upada u bazu, tako što bi se slao veliki broj login zahteva ka serveru. Ovaj rizik se može umanjiti ograničavanjem ukupnog broja zahteva u nekom vremenskom intervalu po sesiji.
-\item Opciono pamćenje sesije u kolačićima na određeno vreme. Ova funkcionalnost, poznatija kao \textit{remember me}, omogućava korisnicima da se samo jednom uloguju na sistem, tj. da ne moraju da unose email i lozinku svaki put. Zbog bezbednosnih razloga je potrebno implementirati i vremensko ograničenje, tj. zastarivanje sesije. Trenutno se na sistem može ulogovati jednom, i ostati neodređeno dugo ulogovan, tj. do trenutka kada se korisnik ručno odjavi ili do kada se restartuje server. Ukoliko korisnik isključi opciju \textit{remember me}, npr. na deljenim računarima, sistem bi automatski izlogovao korisnika čim zatvori stranicu u pregledaču.
+\item Podrška za \textit{Secure Socket Layer} protokol. Korisnici se loguju na sistem tako što šalju email nalog i lozinku kao deo \texttt{POST} zahteva kao \texttt{urlencoded} parametri obrasca. Prostim prisluškivanjem mrežnog saobraćaja moguće je prikupiti sve kredencijale tokom procesa logovanja, i to iskoristiti za lažnu autentikaciju. Na Ring serveru je relativno lako omogućiti OpenSSL podršku, tako da je sav saobraćaj između korisnika i sajta enkriptovan. Time bi se kanal komunikacije sasvim dovoljno osigurao. Za ovu funkcionalnost bi trebalo obezbediti validan sertifikat izdat od strane priznatog autoriteta za sertifikate.
+\item Bolji heš algoritam za skladištenje lozinki. Ukoliko bi maliciozno lice dobilo pristup bazi, moglo bi sa lakoćom da izvrši \textit{brute-force} napad, i da sa dovoljno velikim rečnikom uspe da dođe do lozinki drugih korisnika, zajedno sa email nalozima. Trenutno se za skladištenje lozinki koristi \texttt{MD5} heš vrednost lozinke. Time što bi se koristila bolja funkcija za heširanje, na primer \texttt{SHA256}, ili \texttt{bcrypt}, značajno bi se umanjio rizik od ovakve vrste napada. Takođe, treba imati u vidu da je ovakvu vrstu napada moguće izvršiti i bez upada u bazu, tako što bi se slao veliki broj login zahteva ka serveru. Ovaj rizik se može umanjiti ograničavanjem ukupnog broja zahteva u nekom vremenskom intervalu po sesiji.
+\item Opciono pamćenje sesije u kolačićima na određeno vreme. Ova funkcionalnost, poznatija kao ,,zapamti me'', omogućava korisnicima da se samo jednom uloguju na sistem, tj. da ne moraju da unose email i lozinku svaki put. Zbog bezbednosnih razloga je potrebno implementirati i vremensko ograničenje, tj. zastarivanje sesije. Trenutno se na sistem može ulogovati jednom, i ostati neodređeno dugo ulogovan, tj. do trenutka kada se korisnik ručno odjavi ili do kada se restartuje server. Ukoliko korisnik isključi opciju ,,zapamti me'', npr. na deljenim računarima, sistem bi automatski izlogovao korisnika čim zatvori stranicu u pregledaču.
 \item Skalarno ocenjivanje odgovora. Trenutno se odgovori mogu označiti kao tačni, ili kao netačni. Često se dešava da profesor proceni da je student delimično odgovorio na pitanje. Stoga je neophodno omogućiti profesoru da oceni odgovor sa određenim brojem poena. Ovim bi se takođe otvorila mogućnost definisanja broja poena po pitanju, tj. neka pitanja bi mogla da vrede manje, a neka više poena.
 \item Nove funkcionalnosti sistema za baratanje logičkim jednačinama. Ovde se misli na implementacije različitih strategija zaključivanja.
 \end{itemize}
