--- a/doc/literatura.bib
+++ b/doc/literatura.bib
@@ -75,7 +75,7 @@
 	urldate =		"2016-09-22"
 }
 
-@online{hiccup,
+@online{yesql,
 	title =			{YeSQL},
 	subtitle =		{A {Clojure} library for using SQL},
 	url =				{https://github.com/krisajenkins/yesql},
