--- a/doc/01zahtevi.tex
+++ b/doc/01zahtevi.tex
@@ -25,15 +25,15 @@ Za testove koji su u toku, tj. čije je polaganje korisnik započeo, ali nije za
 \subsubsection{Polaganje testova}
 Svaki test treba da se sastoji iz određenog broja pitanja, grupisanih po stranicama. Svaka stranica, uz pitanja, može opciono da sadrži i \emph{demonstraciju}, koja može biti slika, animacija, jednačina, interaktivni element itd. Postoje tri tipa pitanja:
 \begin{enumerate}
-\item pitanja sa više ponuđenih, a jednim tačnim odgovorom - odgovarajuća komponenta je \textit{radio button},
-\item pitanja sa više ponuđenih i više tačnih odgovora - odgovarajuća komponenta je \textit{checkbox}, i
+\item pitanja sa više ponuđenih, a jednim tačnim odgovorom - odgovarajuća komponenta je radio dugme,
+\item pitanja sa više ponuđenih i više tačnih odgovora - odgovarajuća komponenta je polje koje se štiklira, i
 \item pitanja sa odgovorom u slobodnom stilu - odgovarajuća komponenta je tekstualno polje.
 \end{enumerate}
 Primer jedne stranice sa pitanjima dat je na slici \ref{fig:test-mockup}.
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\textwidth]{test-mockup}
-\caption{UI \textit{mockup} stranice za polaganje testova}
+\caption{Korisnički interfejs stranice za polaganje testova}
 \label{fig:test-mockup}
 \end{figure}
 
@@ -72,7 +72,7 @@ Za potrebe demonstracije određenih algoritama, kao i za potrebe unosa odgovora 
 \end{itemize}
 I pored bogatog skupa logičkih simbola, unos formula mora biti moguć preko standardnih znakova koji se unose preko tastature, ili preko ekrana mobilnog uređaja. Osim toga, neophodno je obezbediti i proveru da li je neki arbitraran unos zaista formula. Ova provera bi se idealno mogla izvršavati uporedo sa unosom, nakon svakog unešenog karaktera.
 
-Nezavisno od načina unosa formula, treba implementirati i renderovanje formula, sa akcentom na čitljivosti. U idealnom slučaju, formule treba prikazati u \LaTeX \space \textit{typesetting} formatu.
+Nezavisno od načina unosa formula, treba implementirati i renderovanje formula, sa akcentom na čitljivosti. U idealnom slučaju, formule treba prikazati u \LaTeX \space formatu.
 
 Kada se govori o transformaciji formula, misli se na svođenje na \textbf{konjuktivnu normalnu formu} (\textit{conjuctive normal form}, skraćeno KNF). Pre definisanja konjuktivne normalne forme, zgodno je uvesti par definicija:
 \begin{itemize}
@@ -132,26 +132,26 @@ Kao deo zahteva druge grupe, neophodno je implementirati automatsku konverziju u
 Online platforma poput izrađene veb aplikacije se može realizovati u gotovo svim višim programskim jezicima današnjice. Prednost svakako imaju jezici koji:
 \begin{itemize}
 \renewcommand\labelitemi{--}
-\item su na dovoljno visokom nivou apstrakcije - na primer, podrška za \textit{garbage collection} je obavezna,
+\item su na dovoljno visokom nivou apstrakcije - na primer, podrška za automatsko oslobađanje memorije je obavezna,
 \item koji se mogu izvršavati na velikom broju platformi uz minimalne izmene izvornog koda - pre svega, interpreterski jezici i jezici koji se izvršavaju na virtuelnim mašinama, tj. prevode se u bajtkod,
-\item dolaze sa kvalitetnom i robusnom standardnom bibliotekom, i za koje postoji veliki broj dostupnih \textit{3rd party} biblioteka, i
+\item dolaze sa kvalitetnom i robusnom standardnom bibliotekom, i za koje postoji veliki broj dostupnih biblioteka izrađenih od strane zajednice, i
 \item imaju detaljnu i preglednu dokumentaciju i podršku online zajednice.
 \end{itemize}
 Sa ovim ne pretarano striktnim ograničenjima na umu, prirodno se nameće veliki broj popularnih jezika: Java, C\#, Python, Go, Rust itd.
 
 Međutim, kako autor tokom dužine studija nije imao priliku da izučava još neku paradigmu osim objektno-orijentisanog programiranja, a vođen idejom da jedan alat nikako ne može da bude pravo rešenje za sve probleme, odluka je pala na \textbf{Clojure}. Clojure je moderni dijalekat LISP-a, i samim tim je funkcionalan jezik. Izvorni kod Clojure programa se prevodi na Java bajtkod, koji se izvršava na Java virtuelnoj mašini\footnote{Osim Java bajtkoda, Clojure kod je moguće pokretati i na \textit{Common Language Runtime} mašini i JavaScript mašini.}. Zbog toga Clojure, pored već bogatog ekosistema raznoraznih biblioteka, ima pristup svim bibliotekama pisanim u Javi. Takođe, Clojure ima veoma aktivnu zajednicu, kao i veliki broj knjiga\cite{Emerick:2012:CP}\cite{Higginbotham:2015:CBT}, priručnika, tutorijala i resursa za učenje.
 
-Jedna prednost Clojure-a nad Javom, koju će autor vremenom naučiti da veoma ceni, jeste postojanje \textbf{REPL} (\textit{read-eval-print-loop}) funkcionalnosti. Radi se o interaktivnoj konzoli u kojoj je moguće unositi i evaluirati delove Clojure koda, veoma slično Python interpreteru. Uz činjenicu da su većina Clojure funkcija \textit{pure}\footnote{Čiste funkcije uvek vraćaju isti rezultat za iste argumente, i nemaju bočne efekte.}, REPL omogućava unikatan način razvijanja aplikacije, gde je funkcija osnovna celina razvoja i testiranja.
+Jedna prednost Clojure-a nad Javom, koju će autor vremenom naučiti da veoma ceni, jeste postojanje \textbf{REPL} (\textit{read-eval-print-loop}) funkcionalnosti. Radi se o interaktivnoj konzoli u kojoj je moguće unositi i evaluirati delove Clojure koda, veoma slično Python interpreteru. Uz činjenicu da su većina Clojure funkcija \emph{čiste}\footnote{Čiste funkcije uvek vraćaju isti rezultat za iste argumente, i nemaju bočne efekte.}, REPL omogućava unikatan način razvijanja aplikacije, gde je funkcija osnovna celina razvoja i testiranja.
 
-Izrađena veb aplikacija se sastoji od dva snažno spregnuta dela: \emph{frontend} sistema i \emph{backend} sistema. Kao što im ime kaže, frontend deo je zadužen za prezentacioni sloj i obradu unosa, dok je backend sistem zadužen za perzistenciju i serviranje sadržaja, i veći deo poslovne logike.
+Izrađena veb aplikacija se sastoji od dva snažno spregnuta dela: \emph{frontend} sistema i \emph{bekend} sistema. Kao što im ime kaže, frontend deo je zadužen za prezentacioni sloj i obradu unosa, dok je bekend sistem zadužen za perzistenciju i serviranje sadržaja, i veći deo poslovne logike.
 
-\subsection{Backend tehnologije}
+\subsection{Bekend tehnologije}
 
 \paragraph{HTTP server}
-\emph{Ring}\cite{ring} je apstrakcija HTTP servera koja preko veoma jednostavnog API-ja\footnote{\url{https://github.com/ring-clojure/ring/blob/master/SPEC}} omogućava korisniku da se fokusira na implementaciju hendlera (tj. poslovne logike), bez ulaženja u detalje HTTP protokola. API definiše HTTP zahtev i HTTP odgovor kao dve obične Clojure mape, a hendlere kao funkcije koje imaju jedan argument (mapu zahteva) i vraćaju odgovor kao mapu. Zbog toga što Ring predstavlja apstrakciju HTTP servera, Ring veb aplikacije mogu da se distribuiraju kao WAR aplikacije i pokreću unutar standardnih kontejnera za veb aplikacije (npr. Tomcat), ili da se pokrenu same pomoću \textit{embedded} Jetty veb servera, što je za potrebe ove veb aplikacije više nego dovoljno.
+\emph{Ring}\cite{ring} je apstrakcija HTTP servera koja preko veoma jednostavnog API-ja\footnote{\url{https://github.com/ring-clojure/ring/blob/master/SPEC}} omogućava korisniku da se fokusira na implementaciju hendlera (tj. poslovne logike), bez ulaženja u detalje HTTP protokola. API definiše HTTP zahtev i HTTP odgovor kao dve obične Clojure mape, a hendlere kao funkcije koje imaju jedan argument (mapu zahteva) i vraćaju odgovor kao mapu. Zbog toga što Ring predstavlja apstrakciju HTTP servera, Ring veb aplikacije mogu da se distribuiraju kao WAR aplikacije i pokreću unutar standardnih kontejnera za veb aplikacije (npr. Tomcat), ili da se pokrenu same pomoću integrisanog Jetty veb servera, što je za potrebe ove veb aplikacije više nego dovoljno.
 
 \paragraph{Rutiranje}
-Ring API je previše jednostavan za neke iole ozbiljnije zahteve, te je zbog toga nastao \emph{Compojure}\cite{compojure}, koji je \textit{routing} biblioteka za Clojure. Jednostavno rečeno, ova biblioteka prosleđuje određene HTTP zahteve (\texttt{GET}, \texttt{POST} itd.) za URI putanjama (tj. resursima) hendlerima koji ih obrađuju. Tako je, na primer, moguće napraviti hendler koji vraća početnu stranicu ukoliko se ka serveru uputi HTTP \texttt{GET} zahtev za \texttt{/index.html} resursom. Međutim, \texttt{POST} zahtevi ka istom resursu će biti odbijeni sa statusom \texttt{403 Forbidden}. Ovaj postupak uparivanja resursa i hendlera se naziva rutiranje.
+Ring API je previše jednostavan za neke iole ozbiljnije zahteve, te je zbog toga nastao \emph{Compojure}\cite{compojure}, koji je Clojure biblioteka za rutiranje. Jednostavno rečeno, ova biblioteka prosleđuje određene HTTP zahteve (\texttt{GET}, \texttt{POST} itd.) za URI putanjama (tj. resursima) hendlerima koji ih obrađuju. Tako je, na primer, moguće napraviti hendler koji vraća početnu stranicu ukoliko se ka serveru uputi HTTP \texttt{GET} zahtev za \texttt{/index.html} resursom. Međutim, \texttt{POST} zahtevi ka istom resursu će biti odbijeni sa statusom \texttt{403 Forbidden}. Ovaj postupak uparivanja resursa i hendlera se naziva rutiranje.
 
 \paragraph{Šabloni} Server generiše HTML stranice na upit pomoću mašine za šablone (\textit{template engine}). U ovu svrhu je korišćena jednostavna Clojure biblioteka pod nazivom \emph{Hiccup}\cite{hiccup}. Jedinstvena je po tome što nema statičke šablonske fajlove, već DOM stablo HTML dokumenta predstavlja preko Clojure struktura podataka, na primer \texttt{[:div \string{:id "header"\string} [:h1 "Header"]]}.
 
@@ -159,7 +159,7 @@ Ring API je previše jednostavan za neke iole ozbiljnije zahteve, te je zbog tog
 Kako korisnički zahtevi nameću, svi podaci o testovima, polaganju testova, registrovanim korisnicima itd. moraju se trajno negde smestiti, tj. moraju biti perzistentni. Standardna rešenja za perzistenciju predstavljaju relacione baze podataka. Autor se odlučio za \emph{PostgreSQL}\cite{postgres}, pre svega zbog postojećeg iskustva sa ovim RDBM sistemom.
 
 \paragraph{Objektno-relaciono mapiranje}
-ORM je strategija povezivanja stanja objekata u memoriji sa stanjem odgovarajućih objekata u relacionoj bazi. Iako su Clojure programima dostupne Java biblioteke koje predstavljaju industrijski standard (na primer, Hibernate), autor se odlučio za laganiju varijantu - za pristup bazi se koristi JDBC drajver za Postgres i mala Clojure biblioteka zvana \emph{YeSQL}\cite{yesql}. Ova biblioteka čita SQL skripte sa upitima, i za svaki upit pravi Clojure funkciju preko kojih je moguće proslediti imenovane parametre u upit, na sličan način na koji se to radi sa \texttt{NamedQuery} objektima u \textit{Java Persistence Language}-u. Nije razmatrana upotreba \textit{connection pooling}-a za konekcije ka bazi. Međutim, ukoliko se ukaže potreba za time, dodavanje takve biblioteke je prosto.
+ORM je strategija povezivanja stanja objekata u memoriji sa stanjem odgovarajućih objekata u relacionoj bazi. Iako su Clojure programima dostupne Java biblioteke koje predstavljaju industrijski standard (na primer, Hibernate), autor se odlučio za laganiju varijantu - za pristup bazi se koristi JDBC drajver za Postgres i mala Clojure biblioteka zvana \emph{YeSQL}\cite{yesql}. Ova biblioteka čita SQL skripte sa upitima, i za svaki upit pravi Clojure funkciju preko kojih je moguće proslediti imenovane parametre u upit, na sličan način na koji se to radi sa \texttt{NamedQuery} objektima u \textit{Java Persistence Language}-u. Nije razmatrana upotreba ponovnog korišćenja konekcija ka bazi (\textit{connection pooling}). Postoje biblioteke koje nude ovu funkcionalnost (npr. \emph{C3P0}), i koje je lako integrisati ukoliko se ukaže potreba za time.
 
 \paragraph{Parsiranje logičkih jednačina} Mesto ručne izrade leksera i parsera za unošenje logičkih jednačina, autor se odlučio da iskoristi sjajnu Clojure biblioteku \emph{Instaparse}\cite{instaparse} za generaciju parsera bezkontekstnih gramatika. Ova biblioteka generiše parser na osnovu specifikacije gramatike u EBNF obliku. Pri tome podržava levu i desnu rekurziju i regularne izraze. Izlaz parsera je stablo parsiranja u obliku standardnog Clojure vektora. Instaparse može da parsira i dvosmislene gramatike, tako što vraća sekvencu svih mogućih stabala parsiranja.
 
@@ -167,11 +167,11 @@ ORM je strategija povezivanja stanja objekata u memoriji sa stanjem odgovarajuć
 
 \subsection{Frontend tehnologije}
 
-\emph{AngularJS}\cite{angularjs} je korišćen kao \textit{de facto} standard za frontend JavaScript framework, u kombinaciji sa \emph{Bootstrap}\cite{bootstrap} CSS stilovima. Angular je uglavnom korišćen za validaciju obrazaca i POST zahteve ka serveru u pozadini, dok Bootstrap obezbeđuje podrazumevanu temu ugodnu za oko, ikonice, i fluidan \textit{layout} stranice koji automatski prilagođava stranicu tipu uređaja, bilo da je to desktop ili mobilni internet pregledač. HTML stranice su u skladu sa HTML5 standardom.
+\emph{AngularJS}\cite{angularjs} je korišćen kao \textit{de facto} standard za frontend JavaScript framework, u kombinaciji sa \emph{Bootstrap}\cite{bootstrap} CSS stilovima. Angular je uglavnom korišćen za validaciju obrazaca i POST zahteve ka serveru u pozadini, dok Bootstrap obezbeđuje podrazumevanu temu ugodnu za oko, ikonice, i fluidnu konfiguraciju elemenata stranice, koja se automatski prilagođava tipu uređaja, bilo da je to desktop ili mobilni internet pregledač. HTML stranice su u skladu sa HTML5 standardom.
 
 Od Bootstrap-a se koristi samo CSS stil, a ostatak funkcionalnosti obezbeđuju Angular direktive za Bootstrap\cite{ui-bootstrap}. Kako se ne koristi ni jQuery biblioteka (Angular dolazi sa svojom laganom alternativom, \textit{jqLite}), ovim se značajno štedi na veličini JavaScript koda koji pregledač učitava, a ne gubi se na funkcionalnosti.
 
-Za prikazivanje logičkih jednačina koristi se JS biblioteka \emph{KaTeX}\cite{katex}, koja omogućava efikasno renderovanje jednačina u \LaTeX formatu.
+Za prikazivanje logičkih jednačina koristi se JS biblioteka \emph{KaTeX}\cite{katex}, koja omogućava efikasno renderovanje jednačina u \LaTeX \space formatu.
 
 \subsection{Alat za kompajliranje i pakovanje aplikacije}
 
@@ -179,4 +179,4 @@ Iako se za kompajliranje i pakovanje Clojure aplikacija može koristiti Maven, \
 
 Pomenuta \emph{uberjar} arhiva veoma je pogodna za distribuciju na ciljnom serveru veb aplikacije. Kako su sve zavisnosti spakovane, jedino što je potrebno da se veb aplikacija pokrene jeste podešeno Java izvršno okruženje.
 
-Međutim, kako veb aplikacija ima neke dodatne zahteve (Postgres server, napravljena baza, otvoren port u \textit{firewall} podešavanjima), napravljena je Vagrant skripta koja sve ovo radi kao deo \textit{provisioning}-a VirtualBox virtuelne instance. Dovoljno je pokrenuti \texttt{vagrant up} da bi se dobilo funkcionalno, lokalno okruženje u kojoj veb aplikacija sluša na lokalnoj mreži na IP adresi \texttt{192.168.33.10:3000}. Instanca je zasnovana na CentOS 7 operativnom sistemu.
+Međutim, kako veb aplikacija ima neke dodatne zahteve (Postgres server, napravljena baza, otvoren port u podešavanjima zaštitnog zida), napravljena je Vagrant skripta koja sve ove zahteve može da obezbedi tokom podešavanja VirtualBox virtuelne instance. Dovoljno je pokrenuti \texttt{vagrant up} da bi se dobilo funkcionalno, lokalno okruženje u kojoj veb aplikacija sluša na lokalnoj mreži na IP adresi \texttt{192.168.33.10:3000}. Instanca je zasnovana na CentOS 7 operativnom sistemu.
